--- a/Homework06.ipynb
+++ b/Homework06.ipynb
@@ -52,7 +52,9 @@
     "from data_utils import object_from_json_url\n",
     "from data_utils import StandardScaler\n",
     "from data_utils import LinearRegression, SGDRegressor\n",
-    "from data_utils import regression_error"
+    "from data_utils import regression_error\n",
+    "\n",
+    "from data_utils import PolynomialFeatures\n"
    ]
   },
   {
@@ -155,16 +157,80 @@
    "outputs": [],
    "source": [
     "# Work on Data Exploration here\n",
+    "# print(\"raw data describe:\")\n",
+    "# display(ansur_df.describe())\n",
     "\n",
     "### Encode non-numerical features\n",
     "\n",
+    "# need to encode \"gender\" col\n",
+    "genders = ['M', 'F']\n",
+    "print(genders)\n",
+    "gender_encoder = OrdinalEncoder(categories=[genders])\n",
+    "gender_vals = gender_encoder.fit_transform(ansur_df[[\"gender\"]].values)\n",
+    "ansur_df[[\"gender\"]] = gender_vals # gender is now 0 or 1\n",
+    "\n",
+    "\n",
     "## 1. Print min, max, avg\n",
+    "print(\"encoded data describe:\")\n",
+    "display(ansur_df.describe())\n",
     "\n",
     "### Normalize all data\n",
-    "\n",
+    "stdScaler = StandardScaler()\n",
+    "ansur_scaled = stdScaler.fit_transform(ansur_df)\n",
+    "print(\"normalized data describe:\")\n",
+    "display(ansur_scaled.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "## 2. Print Covariances\n",
+    "cov_age = ansur_scaled.cov()[\"age\"]\n",
+    "print(\"covariance age:\")\n",
+    "display(cov_age.abs().sort_values())\n",
     "\n",
-    "## 3. Plot features most correlated to age, ear length and head circumference"
+    "cov_earL = ansur_scaled.cov()[\"ear.length\"]\n",
+    "print(\"covariance ear length:\")\n",
+    "display(cov_earL.abs().sort_values())\n",
+    "\n",
+    "cov_headC = ansur_scaled.cov()[\"head.circumference\"]\n",
+    "print(\"covariance head circumference:\")\n",
+    "display(cov_headC.abs().sort_values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 3. Plot features most correlated to age, ear length and head circumference\n",
+    "ages = ansur_scaled[\"age\"]\n",
+    "ear_Ls = ansur_scaled[\"ear.length\"]\n",
+    "head_Cs = ansur_scaled[\"head.circumference\"]\n",
+    "\n",
+    "# age max cov: ear.length = 0.292098\n",
+    "plt.scatter(ear_Ls, ages, marker='o', linestyle='', alpha=0.3)\n",
+    "plt.xlabel(\"ear length\")\n",
+    "plt.ylabel(\"age\")\n",
+    "plt.show()\n",
+    "\n",
+    "# ear length max cov: weight = 0.487481\n",
+    "weights = ansur_scaled[\"weight\"]\n",
+    "plt.scatter(weights, ear_Ls,  marker='o', linestyle='', alpha=0.3)\n",
+    "plt.xlabel(\"weight\")\n",
+    "plt.ylabel(\"ear length\")\n",
+    "plt.show()\n",
+    "\n",
+    "# head circumference max cov: head.height = 0.546534\n",
+    "head_Hs = ansur_scaled[\"head.height\"]\n",
+    "plt.scatter(head_Hs, head_Cs, marker='o', linestyle='', alpha=0.3)\n",
+    "plt.xlabel(\"head height\")\n",
+    "plt.ylabel(\"head circumference\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -187,7 +253,11 @@
     ]
    },
    "source": [
-    "<span style=\"color:hotpink;\">EDIT THIS CELL WITH ANSWER</span>"
+    "The graphs for ear length and head circumerference with their most correlated features seem to be a relatively linear upward trend. The graph for age however doesn't look as clear, and was also the lowest covariance number.\n",
+    "\n",
+    "The 2 graphs that include ear length (age and ear length) seem to have discrete measurements, whereas the graph for head circumference is more clustered without discrete values. \n",
+    "\n",
+    "The feature most correlated to age is ear length, but the feature most correlated to ear length is weight, so they are not symmetrical. "
    ]
   },
   {
@@ -224,11 +294,46 @@
     "\n",
     "## Separate outcome variable and input features\n",
     "\n",
+    "# outcome variable: \n",
+    "headCs = ansur_scaled[\"head.circumference\"]\n",
+    "features = ansur_scaled.drop(columns=[\"head.circumference\"])\n",
+    "\n",
+    "# create extra features to improve the model\n",
+    "poly = PolynomialFeatures(degree=3, include_bias=False)\n",
+    "features_poly = poly.fit_transform(features)\n",
+    "\n",
     "## Create a regression model\n",
+    "model = LinearRegression()\n",
+    "\n",
+    "# start with linear regression for all features\n",
+    "# model.fit(features, headCs)\n",
+    "\n",
+    "# see if model with poly features is better\n",
+    "model.fit(features_poly, headCs)\n",
     "\n",
     "## Measure error on training data\n",
+    "# predicted_scaled = model.predict(features)\n",
+    "predicted_scaled = model.predict(features_poly)\n",
+    "predicted = stdScaler.inverse_transform(predicted_scaled)\n",
     "\n",
-    "## Plot predictions and interpret results"
+    "regression_error(predicted, ansur_df[\"head.circumference\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# start by plotting the features that were most closely related to head circumference\n",
+    "\n",
+    "for feature in [\"head.height\", \"weight\", \"foot.length\"]:\n",
+    "    feat = ansur_df[feature]\n",
+    "    plt.plot(feat, ansur_df[\"head.circumference\"], marker='o', linestyle='', alpha=0.3)\n",
+    "    plt.plot(feat, predicted[\"head.circumference\"], color='r', marker='o', linestyle='', alpha=0.3)\n",
+    "    plt.xlabel(feature)\n",
+    "    plt.ylabel(\"head.circumference\")\n",
+    "    plt.show()"
    ]
   },
   {
@@ -245,10 +350,10 @@
     "\n",
     "ansur_test_encoded_df = ansur_test_df.copy()\n",
     "\n",
-    "g_vals = ansur_encoder.transform(ansur_test_df[[\"gender\"]].values)\n",
+    "g_vals = gender_encoder.transform(ansur_test_df[[\"gender\"]].values)\n",
     "ansur_test_encoded_df[[\"gender\"]] = g_vals\n",
     "\n",
-    "ansur_test_scaled_df = ansur_scaler.transform(ansur_test_encoded_df)"
+    "ansur_test_scaled_df = stdScaler.transform(ansur_test_encoded_df)"
    ]
   },
   {
@@ -263,9 +368,28 @@
    "source": [
     "## Run model on test data\n",
     "\n",
-    "## Measure error on test data\n",
+    "headCs_test = ansur_test_scaled_df[\"head.circumference\"]\n",
+    "features_test = ansur_test_scaled_df.drop(columns=[\"head.circumference\"])\n",
+    "# poly_test = PolynomialFeatures(degree=3, include_bias=False)\n",
+    "# features_poly_test = poly_test.fit_transform(features_test)\n",
     "\n",
-    "## Plot predictions and interpret results"
+    "model.fit(features_test, headCs_test)\n",
+    "\n",
+    "## Measure error on test data\n",
+    "predicted_scaled_test = model.predict(features_test)\n",
+    "predicted_test = stdScaler.inverse_transform(predicted_scaled_test)\n",
+    "\n",
+    "display(regression_error(predicted_test, ansur_test_df[\"head.circumference\"]))\n",
+    "\n",
+    "## Plot predictions and interpret results\n",
+    "\n",
+    "for feature in [\"head.height\", \"weight\", \"foot.length\"]:\n",
+    "    feat = ansur_test_df[feature]\n",
+    "    plt.plot(feat, ansur_test_df[\"head.circumference\"], color='b', marker='o', linestyle='', alpha=0.3)\n",
+    "    plt.plot(feat, predicted_test[\"head.circumference\"], color='r', marker='o', linestyle='', alpha=0.3)\n",
+    "    plt.xlabel(feature)\n",
+    "    plt.ylabel(\"head.circumference\")\n",
+    "    plt.show()\n"
    ]
   },
   {
@@ -289,8 +413,23 @@
     ]
    },
    "source": [
-    "<span style=\"color:hotpink;\">EDIT THIS CELL WITH ANSWER</span>"
+    "A linear regression model with all of the features led to these regression_error results:\n",
+    "training: 13.910571985204234\n",
+    "test: 14.171132427777215\n",
+    "These numbers don't seem so bad for circumferences in the range of 502 - 653.\n",
+    "\n",
+    "The errors are pretty similar which is a good sign, but the model isn't great at predicting circumference values on the low and high end in both the training and test data, roughly above 600 and below 540. \n",
+    "\n",
+    "When adding additional features using PolynomialFeatures the regression_error reduced a bit in training to \n",
+    "12.626836323124518\n",
+    "but it still wasn't great at predicting the high and low values.\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -299,7 +438,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3.9.17 ('hf-model')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -313,12 +452,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "89e384cab7c47fb35ec95d2248b519cf922ee174880eed636c26cdfb6c4df768"
-   }
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
